--- a/resume-frontend/public/index.html
+++ b/resume-frontend/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src='https://kit.fontawesome.com/a56fd02a29.js' crossorigin='anonymous'></script>
     <title>Rex Resume</title>
   </head>
   <body>
