--- a/resume-frontend/public/index.html
+++ b/resume-frontend/public/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <script src='https://kit.fontawesome.com/a56fd02a29.js' crossorigin='anonymous'></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;600&display=swap" rel="stylesheet">
     <title>Rex Resume</title>
   </head>
   <body>
